--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* Generale */
+body {
+  font-family: Arial, sans-serif;
+  background-color: var(--paletteNeautral95);
+  color: #333;
+  margin: "0";
+  padding: "0";
+}
+
+/* Navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #007bff;
+  padding: 10px 20px;
+}
+
+.navbar-left h1 {
+  color: brandHeader;
+  margin: "0";
+}
+
+.navbar-center {
+  flex-grow: 1;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar-center ul {
+  list-style-type: none;
+  margin: "0";
+  padding: "0";
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-center ul li {
+  margin: "0" 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar-center ul li a {
+  color: brandHeader;
+  text-decoration: none;
+  font-size: 18px;
+  transition: text-decoration 0.3s ease;
 }
 
-.card {
-  padding: 2em;
+.navbar-center ul li a:hover {
+  text-decoration: underline;
 }
 
-.read-the-docs {
-  color: #888;
+/* Corpo principale */
+main {
+  margin: 20px;
+}
+
+section {
+  background-color: brandHeader;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* Footer */
+footer {
+  background-color: #333;
+  color: brandHeader;
+  padding: 10px;
+  text-align: center;
 }
