--- a/src/index.css
+++ b/src/index.css
@@ -23,26 +23,26 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: "0";
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: sizeMedium;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 14px;
   line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: borderWidthThin solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 14px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: paletteNeutral10;
   cursor: pointer;
   transition: border-color 0.25s;
 }
